--- a/src/app/shared/components/login/login.component.css
+++ b/src/app/shared/components/login/login.component.css
@@ -8,7 +8,7 @@
     }
     
     .bg-image {
-        background-image: url('https://image.freepik.com/foto-gratis/medico-presentar-algo-sobre-fondo-blanco-aislado_1368-5834.jpg');
+        background-image: url('https://www.clipartkey.com/mpngs/m/71-711469_doctor-login.png');
         background-size: cover;
     }
     
