--- a/src/app/admin/components/admin-principal/admin-principal.component.css
+++ b/src/app/admin/components/admin-principal/admin-principal.component.css
@@ -57,7 +57,7 @@ a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #7386D5;
+    background: #61A7DA;
     color: #fff;
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
@@ -70,7 +70,7 @@ a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #6d7fcc;
+    background: #61A7DA;
 }
 
 #sidebar ul.components {
