--- a/src/app/doctor/components/citas-doctor/citas-doctor.component.html
+++ b/src/app/doctor/components/citas-doctor/citas-doctor.component.html
@@ -12,7 +12,7 @@
                 <p>Precio: {{ p.price | currency: "COP " }}</p>
                 <p>Fecha: {{ p.date | date }}</p>
                 <a [routerLink]="['/doctor-principal/finalizar-cita', p.appointmentId]">
-                    <button class="btn bg-main btn-block text-color-main">
+                    <button class="btn bg-main btn-block text-white">
             Iniciar cita
           </button></a>
             </div>
