--- a/src/app/doctor/components/finalizar-cita/finalizar-cita.component.html
+++ b/src/app/doctor/components/finalizar-cita/finalizar-cita.component.html
@@ -42,7 +42,7 @@
             <label for="inputRecomendaciones">Recomendaciones</label>
             <textarea class="form-control" id="inputRecomendaciones" #inputRecomendaciones name="inputRecomendaciones" [(ngModel)]="treatment.description" rows="3"></textarea>
         </div>
-        <button class="btn bg-main btn-block text-color-main" (click)="agregarTratamiento()">
+        <button class="btn bg-main btn-block text-white" (click)="agregarTratamiento()">
       Agregar tratamiento
     </button>
     </form>
