--- a/src/app/doctor/components/settings-doctor/settings-doctor.component.html
+++ b/src/app/doctor/components/settings-doctor/settings-doctor.component.html
@@ -45,7 +45,8 @@
     </div>
     <hr>
     <div class="row">
-        <div class="col-xl-12    form-group">
+        <div class="offset-xl-2"></div>
+        <div class="col-xl-10 form-group">
             <button class="btn bg-main text-white btn-block">Editar</button>
         </div>
     </div>
