--- a/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
+++ b/src/app/patient/components/servicios-medicos-patient/servicios-medicos-patient.component.html
@@ -105,7 +105,7 @@
           <option value="17">5 p.m</option>
         </select>
             </div>
-            <button class="btn bg-main text-color-main btn-block" (click)="guardarCita(inputHora.value)">
+            <button class="btn bg-main text-white btn-block" (click)="guardarCita(inputHora.value)">
         Solicitar cita
       </button>
         </form>
