--- a/src/app/admin/components/admin-principal/admin-principal.component.css
+++ b/src/app/admin/components/admin-principal/admin-principal.component.css
@@ -1,9 +1,4 @@
 @import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
-body {
-    font-family: 'Poppins', sans-serif;
-    background: #fafafa;
-}
-
 p {
     font-family: 'Poppins', sans-serif;
     font-size: 1.1em;
@@ -38,7 +33,7 @@ a:focus {
 .line {
     width: 100%;
     height: 1px;
-    border-bottom: 1px dashed #ddd;
+    border-bottom: 1px solid #47748b;
     margin: 40px 0;
 }
 
@@ -57,7 +52,7 @@ a:focus {
 #sidebar {
     min-width: 250px;
     max-width: 250px;
-    background: #61A7DA;
+    background: #3E84B8;
     color: #fff;
     transition: all 0.6s cubic-bezier(0.945, 0.020, 0.270, 0.665);
     transform-origin: bottom left;
@@ -70,12 +65,13 @@ a:focus {
 
 #sidebar .sidebar-header {
     padding: 20px;
-    background: #61A7DA;
+    background: #3E84B8;
 }
 
 #sidebar ul.components {
     padding: 20px 0;
     border-bottom: 1px solid #47748b;
+    border-top: 1px solid #47748b;
 }
 
 #sidebar ul p {
@@ -90,8 +86,8 @@ a:focus {
 }
 
 #sidebar ul li a:hover {
-    color: #7386D5;
-    background: #fff;
+    color: #3E84B8;
+    background: #C2E6FE;
 }
 
 #sidebar ul li.active>a,
