--- a/src/app/shared/components/register-doctor/register-doctor.component.html
+++ b/src/app/shared/components/register-doctor/register-doctor.component.html
@@ -5,7 +5,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-10 col-xl-7 mx-auto">
-                            <h3 class="display-4">{{title}}</h3>
+                            <h3 class="display-4 color-titles">{{title}}</h3>
                             <form autocomplete="off" [formGroup]="formRegister" (ngSubmit)="register(tIdentificacion.value,ciudad.value)">
                                 <div class="form-group mb-3">
                                     <select name="tIdentificacion" id="tIdentificacion" #tIdentificacion class="form-control rounded-pill border-0 shadow-sm px-4" required="" [class.is-invalid]="tIdentificacionNoValido" formControlName="tIdentificacion">
@@ -46,7 +46,7 @@
                                         </option>
                                     </select>
                                     <div class="text-left">
-                                        <small *ngIf="ciudadNoValido" class="text-danger ">Seleccione un tipo de identificación</small>
+                                        <small *ngIf="ciudadNoValido" class="text-danger ">Seleccione una ciudad</small>
                                     </div>
                                 </div>
                                 <button type="submit" class="btn bg-main text-white btn-block text-uppercase mb-2 rounded-pill shadow-sm">Registrarse</button>
