--- a/src/app/shared/components/restore-password/restore-password.component.html
+++ b/src/app/shared/components/restore-password/restore-password.component.html
@@ -31,7 +31,7 @@
                 <div class="form-group row mb-0">
                     <div class=" offset-lg-4 offset-xl-4"></div>
                     <div class="input-group col-md-4">
-                        <a class="btn btn-block color-main" routerLink="/login">Ingresar</a>
+                        <a class="btn btn-block" routerLink="/login">Ingresar</a>
                     </div>
 
                 </div>
