--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,6 @@
 
 * {
     font-family: "Kanit", sans-serif;
-    color: #808080;
     /* background-image: url(assets/fondo.jpg); */
 }
 
@@ -16,7 +15,6 @@ body {
 }
 
 footer {
-    color: white;
     text-align: center;
     position: fixed;
     bottom: 0px;
@@ -29,10 +27,6 @@ footer {
     background-color: #61A7DA;
 }
 
-.color-main {
-    color: #61A7DA;
-}
-
-.text-color-main {
-    color: white;
+.color-titles {
+    color: #808080;
 }
