--- a/src/app/patient/components/patient-profile/patient-profile.component.html
+++ b/src/app/patient/components/patient-profile/patient-profile.component.html
@@ -1,71 +1,78 @@
 <div class="container">
     <h1 class="text-center">Mi perfil</h1>
     <div class="text-center">
-        <img src="https://www.asf.com.mx/Imagenes/Login.png" alt="" class="img-fluid">
+        <img src="https://www.asf.com.mx/Imagenes/Login.png" alt="" class="img-fluid" />
     </div>
-    <hr>
-    <div class="row">
-        <div class="col-xl-2 form-group">
-            <label class="col-form-label" for="">Correo :</label>
-        </div>
-        <div class="col-xl-10 form-group">
-            <input type="text" class="form-control" disabled [value]="email">
-        </div>
-        <div class="col-xl-2 form-group">
-            <label class="col-form-label" for="">Nombre :</label>
-        </div>
-        <div class="col-xl-10 form-group">
-            <input type="text" class="form-control" [value]="patient.firstName">
-        </div>
-        <div class="col-xl-2 form-group">
-            <label class="col-form-label" for="">Apellidos :</label>
-        </div>
-        <div class="col-xl-10 form-group">
-            <input type="text" class="form-control" [value]="patient.lastName+' '+patient.lastName2">
-        </div>
-        <div class="col-xl-2 form-group">
-            <label class="col-form-label" for="">Fecha nacimiento :</label>
-        </div>
-        <div class="col-xl-10 form-group">
-            <input type="text" class="form-control" [value]="patient.birthdate | date">
-        </div>
-        <div class="col-xl-2 form-group">
-            <label class="col-form-label" for="">Telefono :</label>
-        </div>
-        <div class="col-xl-10 form-group">
-            <input type="text" class="form-control" [value]="patient.phone">
-        </div>
-        <div class="col-xl-2 form-group">
-            <label class="col-form-label" for="">Alto (Cm):</label>
-        </div>
-        <div class="col-xl-10 form-group">
-            <input type="text" class="form-control" [value]="patient.height">
-        </div>
-        <div class="col-xl-2 form-group">
-            <label class="col-form-label" for="">Peso (Kg):</label>
-        </div>
-        <div class="col-xl-10 form-group">
-            <input type="text" class="form-control" [value]="patient.weight">
-        </div>
-        <!-- <div class="col-xl-2 form-group">
+    <hr />
+    <form [formGroup]="formActualizar" (ngSubmit)="actualizarPaciente()">
+        <div class="row">
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Correo :</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" disabled [value]="email" />
+            </div>
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Nombre :</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" formControlName="{{ 'nombre' }}" />
+            </div>
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Primer apellido :</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" formControlName="{{ 'primerApellido' }}" />
+            </div>
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Segundo apellido :</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" formControlName="{{ 'segundoApellido' }}" />
+            </div>
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Fecha nacimiento :</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="date" class="form-control" formControlName="{{ 'fechaNacimiento' }}" />
+            </div>
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Telefono :</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" formControlName="{{ 'telefono' }}" />
+            </div>
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Alto (Cm):</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" formControlName="{{ 'alto' }}" />
+            </div>
+            <div class="col-xl-2 form-group">
+                <label class="col-form-label" for="">Peso (Kg):</label>
+            </div>
+            <div class="col-xl-10 form-group">
+                <input type="text" class="form-control" formControlName="{{ 'peso' }}" />
+            </div>
+            <!-- <div class="col-xl-2 form-group">
             <label class="col-form-label" for="">Ocupación :</label>
         </div>
         <div class="col-xl-10 form-group">
             <input type="text" class="form-control" [value]="patient.ocupation">
         </div> -->
-        <!-- <div class="col-xl-2 form-group">
+            <!-- <div class="col-xl-2 form-group">
             <label class="col-form-label" for="">Estado civil :</label>
         </div>
         <div class="col-xl-10 form-group">
             <input type="text" class="form-control" [value]="patient.maritalStatus">
         </div> -->
-
-    </div>
-    <hr>
-    <div class="row">
-        <div class="offset-xl-2"></div>
-        <div class="col-xl-10 form-group">
-            <button class="btn bg-main text-white btn-block">Editar</button>
         </div>
-    </div>
+        <hr />
+        <div class="row">
+            <div class="offset-xl-2"></div>
+            <div class="col-xl-10 form-group">
+                <button class="btn bg-main text-white btn-block" type="submit">Editar</button>
+            </div>
+        </div>
+    </form>
 </div>
