--- a/src/app/doctor/components/reportes-doctor/reportes-doctor.component.html
+++ b/src/app/doctor/components/reportes-doctor/reportes-doctor.component.html
@@ -1,1 +1,8 @@
-<p>reportes-doctor works!</p>
+<div>
+    <div>
+        <div style="display: block">
+            <canvas baseChart [datasets]="barChartData" [labels]="barChartLabels" [options]="barChartOptions" [plugins]="barChartPlugins" [legend]="barChartLegend" [chartType]="barChartType">
+        </canvas>
+        </div>
+    </div>
+</div>
